--- a/SvampeAtlas/Base.lproj/Main.storyboard
+++ b/SvampeAtlas/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="nbd-0V-aQq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="nbd-0V-aQq">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -127,22 +127,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="262.66666666666669" height="734"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" misplaced="YES" id="ZAj-tQ-uqK">
-                            <rect key="frame" x="0.0" y="0.0" width="262.66666666666669" height="176"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoSmall" translatesAutoresizingMaskIntoConstraints="NO" id="2IV-Cw-pGg">
-                                    <rect key="frame" x="47.999999999999986" y="48" width="166.66666666666663" height="2"/>
-                                </imageView>
-                            </subviews>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstItem="2IV-Cw-pGg" firstAttribute="top" secondItem="ZAj-tQ-uqK" secondAttribute="top" constant="48" id="YBR-jp-aSg"/>
-                                <constraint firstAttribute="bottom" secondItem="2IV-Cw-pGg" secondAttribute="bottom" constant="48" id="oCH-uW-Sfh"/>
-                                <constraint firstAttribute="trailing" secondItem="2IV-Cw-pGg" secondAttribute="trailing" constant="48" id="uJm-GX-2bu"/>
-                                <constraint firstItem="2IV-Cw-pGg" firstAttribute="leading" secondItem="ZAj-tQ-uqK" secondAttribute="leading" constant="48" id="vHE-Rb-pQp"/>
-                            </constraints>
-                        </view>
                         <sections/>
                         <connections>
                             <outlet property="dataSource" destination="Ygz-p4-kFx" id="0wy-cA-lAZ"/>
@@ -397,7 +381,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="IMG_15270" width="2560" height="1600"/>
-        <image name="LogoSmall" width="97" height="111"/>
+        <image name="IMG_15270" width="614.4000244140625" height="384"/>
     </resources>
 </document>
